# android-mcp-server

./: README.md  main.py  pyproject.toml
android_mcp_server/: __init__.py  __main__.py  main.py  server.py
android_mcp_server/adb/: __init__.py  client.py  device.py
android_mcp_server/scrcpy/: __init__.py  client.py
android_mcp_server/tools/: app.py  device.py  file.py  input.py  screen.py  system.py
docs/superpowers/plans/: 2026-04-16-android-mcp-server-implementation.md  2026-04-20-uiautomator2-replacement.md
docs/superpowers/specs/: 2026-04-16-android-mcp-server-design.md  2026-04-20-uiautomator2-replacement-design.md
src/android_mcp/: __init__.py  main.py
src/android_mcp/adb/: client.py  device.py
src/android_mcp/scrcpy/: client.py  control.py
src/android_mcp/tools/: app.py  device.py  file.py  input.py  screen.py  shell.py  system.py  ui.py
tests/adb/: test_client.py
tests/tools/: test_app.py  test_device.py  test_file.py
