[project]
name = "android-mcp-server"
version = "0.1.0"
description = "MCP Server for Android device control via ADB and scrcpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "adb-shell>=0.4.4",
    "pillow>=10.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
android-mcp = "android_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel-packages]
android_mcp_server = "android_mcp_server"
