[project]
name = "android-mcp-server"
version = "0.1.1"
description = "MCP Server for Android device control via ADB and scrcpy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.4",
    "uiautomator2>=3.5.0",
]

[project.urls]
Repository = "https://github.com/chldu2000/android-mcp-server"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/android_mcp"]